added the tasks for the frist assignment. no css installed yet

--- a/index.html
+++ b/index.html
@@ -1,9 +1,19 @@
 <html>
     <head>
+        <nav>
+            <div class="container">
+            <ul class="myUL">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </div>
+        </nav>
         <h1>ARTICLE PAGE</h1>
         <h2>Here you can find all of the articles created by the most talented people!</h2>
-        </head>
-        <body>
+    </head>
+
+    <body>
             <h3>Title: Whispers of the Forest: The Language of Trees</h3>
             <img src="https://picsum.photos/id/156/200">
             <h2>Author: Dr. Nina Carter</h2>
@@ -43,5 +53,7 @@
             <p>
                 Date: 2024-11-30
             </p>
-            </body>
+
+            <p>Contact: Mywonderfulpage@contact.ro </p>
+        </body>
     </html>
