--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <html>
+    <link rel="stylesheet" href="style.css">
     <head>
         <nav>
             <div class="container">
@@ -14,6 +15,7 @@
     </head>
 
     <body>
+        <div class="center">
             <h3>Title: Whispers of the Forest: The Language of Trees</h3>
             <img src="https://picsum.photos/id/156/200">
             <h2>Author: Dr. Nina Carter</h2>
@@ -33,7 +35,8 @@
             <p>
                 Date: 2025-01-22
             </p>
-
+            </div>
+            <div class="center">
             <h3>Title: 10 Productivity Hacks That Actually Work</h3>
             <img src="https://picsum.photos/id/238/200">
             <h2>Author: Rachel Kim</h2>
@@ -53,7 +56,7 @@
             <p>
                 Date: 2024-11-30
             </p>
-
+        </div>
             <p>Contact: Mywonderfulpage@contact.ro </p>
         </body>
     </html>
