added the nececaryy api

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <body>
         <div class="center">
             <h3>Title: Whispers of the Forest: The Language of Trees</h3>
-            <img src="https://picsum.photos/id/156/200">
+            <img src="https://randomfox.ca/images/85.jpg">
             <h2>Author: Dr. Nina Carter</h2>
             <p>
                 Description: A fascinating exploration of how trees communicate through underground fungal networks and chemical signals..
@@ -27,7 +27,7 @@
             </p>
 
             <h3>Title: The Rise of Eco-Friendly Architecture</h3>
-            <img src="https://picsum.photos/id/237/200">
+            <img src="https://randomfox.ca/images/86.jpg">
             <h2>Author: Julian Moreno</h2>
             <p>
                 Description: Discover the latest trends in sustainable building design and how they’re changing urban landscapes.
@@ -38,7 +38,7 @@
             </div>
             <div class="center">
             <h3>Title: 10 Productivity Hacks That Actually Work</h3>
-            <img src="https://picsum.photos/id/238/200">
+            <img src="https://randomfox.ca/images/80.jpg">
             <h2>Author: Rachel Kim</h2>
             <p>
                 Description: A practical guide to boosting efficiency with science-backed techniques and easy daily habits.
@@ -48,7 +48,7 @@
             </p>
 
             <h3>Title: A Brief History of Cryptocurrencies</h3>
-            <img src="https://picsum.photos/id/270/200">
+            <img src="https://randomfox.ca/images/30.jpg">
             <h2>Author: Marcus Lee</h2>
             <p>
                 Description: From Bitcoin to Ethereum—how digital currencies evolved and where they’re headed next.
