update on the api boys

--- a/about.html
+++ b/about.html
@@ -1,9 +1,28 @@
-<nav>
-    <div class="container">
-    <ul class="myUL">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="contact.html">Contact</a></li>
-    </ul>
-</div>
-</nav>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>About - What's That Fox?!</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+  <div class="sidebar">
+    <img src="assets/fox-logo.png" alt="Fox Logo" class="logo" />
+    <div class="nav-item"><img src="assets/home-icon.svg" alt="Home" /><a href="index.html">HOME</a></div>
+    <div class="nav-item"><img src="assets/about-icon.svg" alt="About" /><a href="about.html">ABOUT</a></div>
+    <div class="nav-item"><img src="assets/contact-icon.svg" alt="Contact" /><a href="contact.html">CONTACT</a></div>
+  </div>
+
+  <div class="main-content">
+    <h1>About Us</h1>
+    <p>Welcome to <strong>What’s That Fox?!</strong> – your go-to destination for everything fox-related. From intriguing facts about different fox species to fun images and interesting behavior breakdowns, we celebrate these clever creatures in style.</p>
+
+    <h2>Our Mission</h2>
+    <p>We aim to educate and entertain with accurate, well-researched content that highlights the beauty, adaptability, and mystique of foxes. Whether you're a casual animal lover or a biology enthusiast, there's something here for you!</p>
+
+    <h2>Fun Fact!</h2>
+    <p>Did you know that the Arctic Fox’s fur changes color with the seasons to help it blend in with its surroundings?</p>
+  </div>
+</body>
+</html>
