changed the name of the author

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <img src="${foxes[i].image}" alt="Fox ${i + 1}" class="w-full sm:w-72 rounded-md shadow" />
             <div class="max-w-xl">
               <h3 class="text-xl font-semibold">${post.title}</h3>
-              <h4 class="text-gray-600">Author: API Placeholder</h4>
+              <h4 class="text-gray-600">Author: John Doe</h4>
               <p class="mt-2 text-gray-800">${post.body}</p>
               <p class="text-sm text-gray-500 mt-1">Date: ${new Date().toISOString().split('T')[0]}</p>
             </div>
